b=433235, drawImage of canvas onto self is incorrect; r=roc